k8s/apps/media/arr/radarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: arr
  labels:
    app: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  strategy:
    type: Recreate
  template:
    metadata:
      namespace: radarr
      labels:
        app: radarr
    spec:
      nodeSelector:
        topology.kubernetes.io/zone: hsp-proxmox0
      securityContext:
        runAsNonRoot: true
        runAsUser: 2501
        runAsGroup: 2501
        fsGroup: 2501
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
      dnsConfig:
        options:
          # Lower ndots to avoid search-domain expansion issues (musl/glibc resolver short-circuit)
          # and ensure external and cluster FQDNs resolve correctly.
          # Use this on other Alpine based containers if I face similar issues.
          - name: ndots
            value: "1"
      containers:
        - name: radarr
          image: ghcr.io/home-operations/radarr:6.2.1@sha256:0756fffa75b30219e3dbac8d027a5389f53cbb34ae83fa4b0976c1b0524c8eb1 # renovate: datasource=docker depName=ghcr.io/home-operations/radarr packageName=ghcr.io/home-operations/radarr versioning=docker registryUrl=https://ghcr.io
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          ports:
            - name: http
              containerPort: 7878
          volumeMounts:
            - name: radarr-config
              mountPath: /config
            - name: tmp
              mountPath: /tmp
            - name: data
              mountPath: /app/data
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 1000m
              memory: 256Mi
      volumes:
        - name: radarr-config
          persistentVolumeClaim:
            claimName: radarr-config
        - name: tmp
          emptyDir: {}
        - name: data
          nfs:
            server: 192.168.65.250
            path: /volume1/media
